--- a/src/app/banner/banner.css
+++ b/src/app/banner/banner.css
@@ -1,25 +1,63 @@
-.carousel-wrapper {
+.carousel-container {
   position: relative;
   width: 100%;
-  max-width: 1000px;
-  height: 500px;
   overflow: hidden;
-  margin: auto;
-  border-radius: 12px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.carousel-img {
-  position: absolute;
+.carousel-track {
+  display: flex;
+  transition: transform 1.2s cubic-bezier(0.5, 1, 0.7, 1); /* smoother & slower slide */
   width: 100%;
-  height: 100%;
-  object-fit: cover;
-  opacity: 0;
-  transition: opacity 1s ease-in-out;
-  pointer-events: none;
 }
 
-.carousel-img.active {
-  opacity: 1;
-  pointer-events: auto;
-  z-index: 2;
+
+
+.carousel-slide {
+  flex: 0 0 100%;
+  height: 100%;
+}
+
+.carousel-slide img {
+  width: 100%;
+  height: auto;
+  display: block;
+  object-fit: cover;
+}
+
+.arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: rgba(0, 0, 0, 0.235);
+  font-size: 2.5rem;
+  color: rgb(255, 255, 255);
+  border: none;
+  cursor: pointer;
+  padding: 0.5rem 1rem;
+  z-index: 10;
+  transition: background 0.3s ease;
+}
+
+.arrow:hover {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.arrow.left {
+  left: 10px;
+}
+
+.arrow.right {
+  right: 10px;
+}
+
+/* Responsive */
+@media (max-width: 768px) {
+  .arrow {
+    font-size: 2rem;
+    padding: 0.3rem 0.6rem;
+  }
 }
