--- a/src/app/banner/banner.css
+++ b/src/app/banner/banner.css
@@ -3,18 +3,14 @@
   width: 100%;
   overflow: hidden;
   border-radius: 10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  touch-action: pan-y;
+  user-select: none;
 }
 
 .carousel-track {
   display: flex;
-  transition: transform 1.2s cubic-bezier(0.5, 1, 0.7, 1); /* smoother & slower slide */
   width: 100%;
 }
-
-
 
 .carousel-slide {
   flex: 0 0 100%;
@@ -26,38 +22,4 @@
   height: auto;
   display: block;
   object-fit: cover;
-}
-
-.arrow {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background: rgba(0, 0, 0, 0.235);
-  font-size: 2.5rem;
-  color: rgb(255, 255, 255);
-  border: none;
-  cursor: pointer;
-  padding: 0.5rem 1rem;
-  z-index: 10;
-  transition: background 0.3s ease;
-}
-
-.arrow:hover {
-  background-color: rgba(0, 0, 0, 0.7);
-}
-
-.arrow.left {
-  left: 10px;
-}
-
-.arrow.right {
-  right: 10px;
-}
-
-/* Responsive */
-@media (max-width: 768px) {
-  .arrow {
-    font-size: 2rem;
-    padding: 0.3rem 0.6rem;
-  }
 }
